[tool.poetry]
name = "clouflare"
version = "0.1.0"
description = "Tool to programatically update DNS records in Cloudflare"
authors = ["Dorian Jaminais-Grellier <dorian@jaminais.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
argparse-logging = "^2020.11.26"
urllib-ext = "^2021.10.26"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
